# ChangeLog for kde-misc/filelight
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.11 2006/08/19 16:01:04 carlo Exp $

*filelight-1.0_rc1 (19 Aug 2006)

  19 Aug 2006; Carsten Lohrke <carlo@gentoo.org> +filelight-1.0_rc1.ebuild:
  Version bump.

  25 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  filelight-1.0_beta6.ebuild:
  Remove configure to force autotools rebuild (the pic patch changes
  Makefile.am).

  25 Jun 2005; Aron Griffis <agriffis@gentoo.org>
  filelight-1.0_beta6.ebuild:
  stable on amd64

  05 Jun 2005; Michael Hanselmann <hansmi@gentoo.org>
  filelight-1.0_beta6.ebuild:
  Stable on ppc.

  21 Jan 2005; Carsten Lohrke <carlo@gentoo.org> filelight-1.0_beta6.ebuild:
  stable on x86

*filelight-1.0_beta6 (30 Nov 2004)

  30 Nov 2004; Carsten Lohrke <carlo@gentoo.org>
  +files/filelight-1.0_beta6-pic.patch, +filelight-1.0_beta6.ebuild:
  version bump

*filelight-1.0_beta5 (21 Nov 2004)

  21 Nov 2004; Dominik Stadler <centic@gentoo.org>
  +filelight-1.0_beta5.ebuild:
  Add new Version 1.0beta5

*filelight-1.0_beta4 (10 Nov 2004)

  10 Nov 2004; Carsten Lohrke <carlo@gentoo.org> -filelight-0.6.4.1.ebuild,
  -filelight-1.0_beta1.ebuild, -filelight-1.0_beta2-r1.ebuild,
  -filelight-1.0_beta2-r2.ebuild, -filelight-1.0_beta2.ebuild,
  +filelight-1.0_beta4.ebuild:
  version bump and clean up

  04 Nov 2004; Jason Wever <weeve@gentoo.org> filelight-1.0_beta2-r2.ebuild:
  Added ~sparc keyword.

*filelight-0.6.4.1 (30 Oct 2004)

  30 Oct 2004; Carsten Lohrke <carlo@gentoo.org> +metadata.xml,
  +filelight-0.6.4.1-r1.ebuild, +filelight-0.6.4.1.ebuild,
  +filelight-1.0_beta1.ebuild, +filelight-1.0_beta2-r1.ebuild,
  +filelight-1.0_beta2-r2.ebuild, +filelight-1.0_beta2.ebuild:
  Moved from sys-apps/filelight to kde-misc/filelight.

*filelight-1.0_beta2-r2 (30 Aug 2004)

  30 Aug 2004; Guy Martin <gmsoft@gentoo.org> +filelight-1.0_beta2-r2.ebuild: