@@ -4,6 +4,7 @@ RMD160 9e8a90c7e6446447b0b288730d1e66bc75052a5a files/filelight-1.0_beta6-pic.pa
 SHA256 00c280807f4d25c0a70fa56739802cf87ed7deb56d398e456fdfb19281f7dc75 files/filelight-1.0_beta6-pic.patch 1025
 DIST filelight-1.0-beta6.tar.bz2 667707
 DIST filelight-1.0-rc1.tar.bz2 529926 RMD160 49bf1eaca4dd4cd98dd7dde9a03ce791b49d6250 SHA1 6487a09897dcc07bd114cf12b28708877a3e75d9 SHA256 e2becd3d64ba202812487b869e2a6e971d24605707608a5868209bdf0a28a82b
+DIST filelight-1.0-rc2.tar.bz2 530449 RMD160 67ce0deb03f14cc280f7471156c4f2a3135ebb5e SHA1 2a4644c598dfcc408af0af65e655e2525494708d SHA256 0743d49e60a1b2fa7b54ecdc13fb15c7a6fb144169ba272bc566a18022c245d6
 EBUILD filelight-1.0_beta6.ebuild 708 RMD160 5dfc692d45b06f8933d3da87bbb6cca9a2f5dea0 SHA1 aa780ebdd7f016e7ce7640ccc682cc8fbef112b5 SHA256 8216c8389447e91dc27d7907c8ebfcabef4326b922b1c43ecb8e8895f61230c7
 MD5 9a89d62565dafab8a5bc4318c1896b3e filelight-1.0_beta6.ebuild 708
 RMD160 5dfc692d45b06f8933d3da87bbb6cca9a2f5dea0 filelight-1.0_beta6.ebuild 708
@@ -12,10 +13,14 @@ EBUILD filelight-1.0_rc1.ebuild 578 RMD160 2403f7e35eb3e53405395dc647fd80352a2b3
 MD5 b84c0fadb037cd706cf4675e09c041f7 filelight-1.0_rc1.ebuild 578
 RMD160 2403f7e35eb3e53405395dc647fd80352a2b378c filelight-1.0_rc1.ebuild 578
 SHA256 7587f7a9bdbf8da01f354a39c92d87a458619e8e0c1e68e49bb7813b5f69e80f filelight-1.0_rc1.ebuild 578
-MISC ChangeLog 3407 RMD160 2d20c2155117dd7d36c1048f3ea5fa7668fe8d8c SHA1 65eb17e83534106f6c8537be756d09c4ec0042f9 SHA256 7b45e8f47806539171eaa843dae82cf60a0dd5386eac3150194c10f248643f9a
-MD5 3028120905e960c75219627909f1cae1 ChangeLog 3407
-RMD160 2d20c2155117dd7d36c1048f3ea5fa7668fe8d8c ChangeLog 3407
-SHA256 7b45e8f47806539171eaa843dae82cf60a0dd5386eac3150194c10f248643f9a ChangeLog 3407
+EBUILD filelight-1.0_rc2.ebuild 578 RMD160 ab2940188244d7f66adbc0886cdc7d3bdca6c815 SHA1 060be0fbf35e932b6af9c054b7ceed5cff4c48ee SHA256 99f5768ab566143156b8e7fb109d4d6da4651ce229b04e55b44a0f1c40930cc1
+MD5 bdfa63e0c8b4122c1a0e453824d107f8 filelight-1.0_rc2.ebuild 578
+RMD160 ab2940188244d7f66adbc0886cdc7d3bdca6c815 filelight-1.0_rc2.ebuild 578
+SHA256 99f5768ab566143156b8e7fb109d4d6da4651ce229b04e55b44a0f1c40930cc1 filelight-1.0_rc2.ebuild 578
+MISC ChangeLog 3534 RMD160 935fe78606f7234be6cdd05503cb737f37b02616 SHA1 225d8540849456479aa9ba838241bcb6496fe634 SHA256 ae63351c4a7f8cbbbec722e8fd25fd24a6a68d0dfb4d6f5fd1ac305c9dba2e8c
+MD5 f1172e0ee38011b8c7ae59fb5470231a ChangeLog 3534
+RMD160 935fe78606f7234be6cdd05503cb737f37b02616 ChangeLog 3534
+SHA256 ae63351c4a7f8cbbbec722e8fd25fd24a6a68d0dfb4d6f5fd1ac305c9dba2e8c ChangeLog 3534
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
@@ -26,3 +31,6 @@ SHA256 798b35af3720e436b61bd83a9b9a87bc1ab7b9ac74916b6b30a25e6813e03dae files/di
 MD5 d8cfb5fa1e850614d39d7bddc7d54911 files/digest-filelight-1.0_rc1 256
 RMD160 9b3027339015dec78d68797b38fceb796417dcbf files/digest-filelight-1.0_rc1 256
 SHA256 8ea439f3085264721853cce72df7215358f328ad99954e2c31b0d63c674b7cd2 files/digest-filelight-1.0_rc1 256
+MD5 77c5b073551dae2da06bac61b98df8d4 files/digest-filelight-1.0_rc2 256
+RMD160 13505c881dec91ed0a5712e0b25428bf41bf0c2f files/digest-filelight-1.0_rc2 256
+SHA256 d2e515d57a843b5c47441f938840d5852cee7cf8fdb92e6e43cfb51d6f6ac734 files/digest-filelight-1.0_rc2 256
