@@ -1,0 +1,3 @@
+MD5 aa885e53e09f40e7fdd371395140b957 filelight-1.0-rc2.tar.bz2 530449
+RMD160 67ce0deb03f14cc280f7471156c4f2a3135ebb5e filelight-1.0-rc2.tar.bz2 530449
+SHA256 0743d49e60a1b2fa7b54ecdc13fb15c7a6fb144169ba272bc566a18022c245d6 filelight-1.0-rc2.tar.bz2 530449
