@@ -1,6 +1,11 @@
 # ChangeLog for kde-misc/filelight
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.11 2006/08/19 16:01:04 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.12 2006/08/23 16:28:40 carlo Exp $
+
+*filelight-1.0_rc2 (23 Aug 2006)
+
+  23 Aug 2006; Carsten Lohrke <carlo@gentoo.org> +filelight-1.0_rc2.ebuild:
+  Version bump.
 
 *filelight-1.0_rc1 (19 Aug 2006)
 
